# lmhccookiecutter

./: .pre-commit-config.yaml  CODE_OF_CONDUCT.md  README.md  cookiecutter.json
docs/: conf.py
docs/contributing_guide/: README.md  modify_atoscookiecutter.md
docs/structure/: README.md
docs/{{ cookiecutter.repo_name }}/.govcookiecutter/organisational_frameworks/: README.md
tests/: test_documentation_build.py  test_env.py
{{ cookiecutter.repo_name }}/: .pre-commit-config.yaml  CODE_OF_CONDUCT.md  Makefile  README.md  pyproject.toml
{{ cookiecutter.repo_name }}/.govcookiecutter/organisational_frameworks/: README.md
{{ cookiecutter.repo_name }}/docs/structure/: README.md
