# `coverage` configurations
[tool.coverage.run]
source = [
    "./src"
]

[tool.coverage.report]
exclude_lines = [
    "if __name__ == .__main__.:"
]

# `isort` configurations
[tool.isort]
profile = "black"

# `pytest` configurations
[tool.pytest.ini_options]
addopts = [
    "-vv",
    "--doctest-modules"
]
doctest_optionflags = "NORMALIZE_WHITESPACE"
testpaths = [
    "./tests"
]

# poetry configurations
[tool.poetry]
name = "{{cookiecutter.project_name}}"
version = "0.0.1"
description = "{{cookiecutter.overview}}"
authors = ["{{cookiecutter.organisation_name}} <f{{cookiecutter.contact_email}}>"]
repository = "https://github.com/{{cookiecutter.organisation_handle}}/{{cookiecutter.repo_name}}"
documentation = "https://{{cookiecutter.organisation_handle}}.github.io/{{cookiecutter.repo_name}}/"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<4.0"

[tool.poetry.group.dev.dependencies]
pytest = "*"
pre-commit = "*"
coverage = "*"
detect-secrets = "*"
myst-parser = "*"
python-dotenv = "*"
Sphinx = "*"
toml = "*"
